# python-training

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
data/: Average Weekly Earnings.xlsx  average_weekly_earnings.csv
src/: document.py
src/sheetpub/: load_data.py  sheets.py  team.py
src/transformers/: document.py  fields.py  load_data.py  models.py  sheets.py  team.py
tests/: test_load_data.py  test_mongo.py  test_period_data.py  test_sheets.py
